Migration tool - setters to toBuilder setters

--- a/v2-migration/src/main/resources/META-INF/rewrite/aws-sdk-java-v1-to-v2.yml
+++ b/v2-migration/src/main/resources/META-INF/rewrite/aws-sdk-java-v1-to-v2.yml
@@ -44,3 +44,4 @@ recipeList:
   - software.amazon.awssdk.v2migration.DateToInstant
   - software.amazon.awssdk.v2migration.S3NonStreamingRequestToV2Complex
   - software.amazon.awssdk.v2migration.S3PutObjectRequestToV2
+  - software.amazon.awssdk.v2migration.SettersToBuilderV2
