fix memory issues

--- a/pom.xml
+++ b/pom.xml
@@ -909,9 +909,9 @@
                                 <configuration>
                                     <!-- Sets the VM argument line used when integration tests are run. -->
                                     <!-- this test needs a lot of memory, we need to increase java heap size or we get OOM in codebuild -->
-                                    <argLine>-Xmx8g -Xms1024m -XX:+AllowRedefinitionToAddDeleteMethods</argLine>
+                                    <argLine>-Xmx12g -Xms4g -XX:+AllowRedefinitionToAddDeleteMethods</argLine>
                                     <includes>
-<!--                                        <include>**/s3/checksum/ChecksumIntegrationTesting.java</include>-->
+                                        <include>**/s3/checksum/ChecksumIntegrationTesting.java</include>
                                         <include>**/s3/checksum/DownloadStreamingIntegrationTesting.java</include>
                                     </includes>
                                     <trimStackTrace>false</trimStackTrace>
