added README, verify crc32 of uploaded object with an additional get object, precalculated crc32 when possible, rename S3ClientFlavor fields,

--- a/test/s3-tests/pom.xml
+++ b/test/s3-tests/pom.xml
@@ -167,6 +167,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>test-utils</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
