Enable fast unmarshaller wave five

--- a/services/applicationdiscovery/src/main/resources/codegen-resources/customization.config
+++ b/services/applicationdiscovery/src/main/resources/codegen-resources/customization.config
@@ -18,5 +18,5 @@
         "ExportConfigurations"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
