--- a/services/iotwireless/src/main/resources/codegen-resources/customization.config
+++ b/services/iotwireless/src/main/resources/codegen-resources/customization.config
@@ -1,5 +1,5 @@
 {
     "underscoresInNameBehavior": "ALLOW",
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
