--- a/services/neptunedata/src/main/resources/codegen-resources/customization.config
+++ b/services/neptunedata/src/main/resources/codegen-resources/customization.config
@@ -1,5 +1,5 @@
 {
     "customErrorCodeFieldName": "code",
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
