--- a/services/opsworkscm/src/main/resources/codegen-resources/customization.config
+++ b/services/opsworkscm/src/main/resources/codegen-resources/customization.config
@@ -5,5 +5,5 @@
         "describeServers"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
