--- a/services/polly/src/main/resources/codegen-resources/customization.config
+++ b/services/polly/src/main/resources/codegen-resources/customization.config
@@ -5,5 +5,5 @@
         "listSpeechSynthesisTasks"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
