--- a/services/waf/src/main/resources/codegen-resources/waf/customization.config
+++ b/services/waf/src/main/resources/codegen-resources/waf/customization.config
@@ -19,5 +19,5 @@
         "listWebACLs",
         "listXssMatchSets"
     ],
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
