--- a/services/cloudfrontkeyvaluestore/src/main/resources/codegen-resources/customization.config
+++ b/services/cloudfrontkeyvaluestore/src/main/resources/codegen-resources/customization.config
@@ -1,5 +1,5 @@
 {
     "enableGenerateCompiledEndpointRules": true,
     "enableEndpointAuthSchemeParams": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
