--- a/services/lambda/src/main/resources/codegen-resources/customization.config
+++ b/services/lambda/src/main/resources/codegen-resources/customization.config
@@ -9,5 +9,5 @@
         "InvokeAsync"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
