Enable fast unmarshaller wave six

--- a/services/cloudwatchevents/src/main/resources/codegen-resources/customization.config
+++ b/services/cloudwatchevents/src/main/resources/codegen-resources/customization.config
@@ -4,5 +4,5 @@
         "listRules"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
