--- a/services/cloudwatchlogs/src/main/resources/codegen-resources/customization.config
+++ b/services/cloudwatchlogs/src/main/resources/codegen-resources/customization.config
@@ -15,5 +15,5 @@
         "GetLogEvents": "LastPageHasPreviousToken"
     },
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
