--- a/services/kinesis/src/main/resources/codegen-resources/customization.config
+++ b/services/kinesis/src/main/resources/codegen-resources/customization.config
@@ -53,5 +53,5 @@
         "RegionMismatch: client region should be used for endpoint region": "Test is broken for client tests, need operationInputs."
     },
     "usePriorKnowledgeForH2": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
