--- a/services/swf/src/main/resources/codegen-resources/customization.config
+++ b/services/swf/src/main/resources/codegen-resources/customization.config
@@ -1,5 +1,5 @@
 {
     "serviceSpecificHttpConfig": "software.amazon.awssdk.services.swf.internal.SwfHttpConfigurationOptions",
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
