--- a/v2-migration/pom.xml
+++ b/v2-migration/pom.xml
@@ -288,6 +288,15 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>com.nativelibs4java</groupId>
                 <artifactId>maven-velocity-plugin</artifactId>
                 <version>${maven-velocity-plugin.version}</version>
