--- a/services/s3/src/test/resources/log4j2.properties
+++ b/services/s3/src/test/resources/log4j2.properties
@@ -28,8 +28,8 @@ rootLogger.appenderRef.stdout.ref = ConsoleAppender
 #logger.sdk.name = software.amazon.awssdk
 #logger.sdk.level = debug
 
-#logger.request.name = software.amazon.awssdk.request
-#logger.request.level = debug
+logger.request.name = software.amazon.awssdk.request
+logger.request.level = debug
 #
 #logger.apache.name = org.apache.http.wire
 #logger.apache.level = debug
