--- a/v2-migration/src/main/resources/META-INF/rewrite/s3-methods-constructor-to-fluent.yml
+++ b/v2-migration/src/main/resources/META-INF/rewrite/s3-methods-constructor-to-fluent.yml
@@ -759,6 +759,18 @@ recipeList:
         - withKey
         - withTagging
   - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetObjectTaggingRequest
+      parameterTypes:
+        - java.lang.String
+        - java.lang.String
+        - java.lang.String
+        - com.amazonaws.services.s3.model.ObjectTagging
+      fluentNames:
+        - withBucket
+        - withKey
+        - withVersionId
+        - withTagging
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
       clzzFqcn: com.amazonaws.services.s3.model.BucketVersioningConfiguration
       parameterTypes:
         - java.lang.String
