--- a/v2-migration/src/main/resources/META-INF/rewrite/s3-methods-constructor-to-fluent.yml
+++ b/v2-migration/src/main/resources/META-INF/rewrite/s3-methods-constructor-to-fluent.yml
@@ -731,6 +731,14 @@ recipeList:
       fluentNames:
         - withEmailAddress
   - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.Grant
+      parameterTypes:
+        - com.amazonaws.services.s3.model.Grantee
+        - com.amazonaws.services.s3.model.Permission
+      fluentNames:
+        - withGrantee
+        - withPermission
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
       clzzFqcn: com.amazonaws.services.s3.model.GetRequestPaymentConfigurationRequest
       parameterTypes:
         - java.lang.String
