--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/emitters/customizations/processors/uselegacyeventgenerationscheme/multiple-event-types-same-shape.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/emitters/customizations/processors/uselegacyeventgenerationscheme/multiple-event-types-same-shape.config
@@ -1,5 +1,6 @@
 {
     "useLegacyEventGenerationScheme": {
-        "EventStream": ["EventOne", "secondEventOne"]
-    }
+        "EventStream": {"EventOne": "NO_EVENT_SUBCLASS", "secondEventOne": "NO_EVENT_SUBCLASS"}
+    },
+    "underscoresInNameBehavior": "ALLOW"
 }
