--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/json/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/json/customization.config
@@ -19,7 +19,17 @@
     "returnType": "software.amazon.awssdk.services.json.JsonUtilities",
     "createMethodParams": ["param1", "param2", "param3"]
   },
-  "useLegacyEventGenerationScheme": {
-    "EventStream": ["EventOne", "event-two", "eventThree"]
-  }
+    "useLegacyEventGenerationScheme": {
+        "InputEventStream": {"InputEvent": "NO_UNIQUE_EVENT_NAMES"},
+        "InputEventStreamTwo": {
+            "InputEventOne": "NO_UNIQUE_EVENT_NAMES",
+            "InputEventTwo": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "EventStream": {
+          "EventOne": "NO_EVENT_SUBCLASS",
+          "eventThree": "NO_EVENT_SUBCLASS",
+          "EventTheSecond": "NO_UNIQUE_EVENT_NAMES",
+          "secondEventOne": "NO_UNIQUE_EVENT_NAMES"
+      }
+    }
 }
