--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/rest-json/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/rest-json/customization.config
@@ -63,7 +63,17 @@
     "software.amazon.awssdk.codegen.poet.plugins.InternalTestPlugin2"
   ],
   "useLegacyEventGenerationScheme": {
-    "EventStream": ["EventOne", "event-two", "eventThree"]
+      "InputEventStream": {"InputEvent": "NO_UNIQUE_EVENT_NAMES"},
+      "InputEventStreamTwo": {
+          "InputEventOne": "NO_UNIQUE_EVENT_NAMES",
+          "InputEventTwo": "NO_UNIQUE_EVENT_NAMES"
+      },
+      "EventStream": {
+        "EventOne": "NO_EVENT_SUBCLASS",
+        "eventThree": "NO_EVENT_SUBCLASS",
+        "EventTheSecond": "NO_UNIQUE_EVENT_NAMES",
+        "secondEventOne": "NO_UNIQUE_EVENT_NAMES"
+    }
   },
   "asyncClientDecoratorClass": true,
   "syncClientDecoratorClass": true,
