--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/transform/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/transform/customization.config
@@ -7,5 +7,14 @@
     ],
     "modelMarshallerDefaultValueSupplier": {
          "StringMember" : "software.amazon.awssdk.codegen.poet.transform.CustomDefaultValueSupplier.getInstance()"
+    },
+    "useLegacyEventGenerationScheme": {
+        "InputEventStream": {"InputEvent": "NO_UNIQUE_EVENT_NAMES"},
+        "InputEventStreamTwo": {"InputEventTwo": "NO_UNIQUE_EVENT_NAMES"},
+        "EventStream": {
+            "EventOne": "NO_UNIQUE_EVENT_NAMES",
+            "EventTwo": "NO_UNIQUE_EVENT_NAMES",
+            "EventThree": "NO_UNIQUE_EVENT_NAMES"
+        }
     }
 }
