--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/cbor/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/cbor/customization.config
@@ -20,7 +20,17 @@
     "createMethodParams": ["param1", "param2", "param3"]
   },
   "useLegacyEventGenerationScheme": {
-    "EventStream": ["EventOne", "event-two", "eventThree"]
+      "InputEventStream": {"InputEvent": "NO_UNIQUE_EVENT_NAMES"},
+      "InputEventStreamTwo": {
+          "InputEventOne": "NO_UNIQUE_EVENT_NAMES",
+          "InputEventTwo": "NO_UNIQUE_EVENT_NAMES"
+      },
+      "EventStream": {
+        "EventOne": "NO_EVENT_SUBCLASS",
+        "eventThree": "NO_EVENT_SUBCLASS",
+        "EventTheSecond": "NO_UNIQUE_EVENT_NAMES",
+        "secondEventOne": "NO_UNIQUE_EVENT_NAMES"
+    }
   },
   "customServiceMetadata": {
     "protocol": "cbor"
