--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/model/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/model/customization.config
@@ -60,5 +60,16 @@
       }
     },
     "underscoresInNameBehavior": "ALLOW",
-    "requiredTraitValidationEnabled": true
+    "requiredTraitValidationEnabled": true,
+    "useLegacyEventGenerationScheme": {
+        "InputEventStream": {"InputEvent": "NO_UNIQUE_EVENT_NAMES"},
+        "InputEventStreamTwo": {"InputEventTwo": "NO_UNIQUE_EVENT_NAMES"},
+        "EventStream": {
+            "EventOne": "NO_UNIQUE_EVENT_NAMES",
+            "SecondEventOne": "NO_UNIQUE_EVENT_NAMES",
+            "EventTwo": "NO_UNIQUE_EVENT_NAMES",
+            "SecondEventTwo": "NO_UNIQUE_EVENT_NAMES",
+            "eventthree": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
