--- a/services/kinesis/src/main/resources/codegen-resources/customization.config
+++ b/services/kinesis/src/main/resources/codegen-resources/customization.config
@@ -18,7 +18,7 @@
   },
   "serviceSpecificHttpConfig": "software.amazon.awssdk.services.kinesis.internal.KinesisHttpConfigurationOptions",
   "useLegacyEventGenerationScheme": {
-      "SubscribeToShardEventStream": ["SubscribeToShardEvent"]
+      "SubscribeToShardEventStream": {"SubscribeToShardEvent": "NO_EVENT_SUBCLASS"}
     },
     "skipEndpointTests": {
         "Account endpoint targeting control operation type in ADC regions": "Test is broken for client tests, need operationInputs.",
