--- a/services/transcribestreaming/src/main/resources/codegen-resources/customization.config
+++ b/services/transcribestreaming/src/main/resources/codegen-resources/customization.config
@@ -3,9 +3,9 @@
     "serviceSpecificHttpConfig": "software.amazon.awssdk.services.transcribestreaming.internal.DefaultHttpConfigurationOptions",
     "skipSyncClientGeneration": true,
     "useLegacyEventGenerationScheme": {
-        "TranscriptResultStream": ["TranscriptEvent"],
-        "AudioStream": ["AudioEvent"],
-        "MedicalTranscriptResultStream": ["TranscriptEvent"]
+        "TranscriptResultStream": {"TranscriptEvent": "NO_EVENT_SUBCLASS"},
+        "AudioStream": {"AudioEvent": "NO_EVENT_SUBCLASS"},
+        "MedicalTranscriptResultStream": {"TranscriptEvent": "NO_EVENT_SUBCLASS"}
     },
     "usePriorKnowledgeForH2": true,
     "enableFastUnmarshaller": true
