Add all existing eventstreams to customization w/ legacy mode

--- a/services/bedrockagentruntime/src/main/resources/codegen-resources/customization.config
+++ b/services/bedrockagentruntime/src/main/resources/codegen-resources/customization.config
@@ -1,4 +1,76 @@
 {
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": true
+    "enableFastUnmarshaller": true,
+    "useLegacyEventGenerationScheme": {
+        "FlowResponseStream": {
+            "accessDeniedException": "NO_UNIQUE_EVENT_NAMES",
+            "badGatewayException": "NO_UNIQUE_EVENT_NAMES",
+            "conflictException": "NO_UNIQUE_EVENT_NAMES",
+            "dependencyFailedException": "NO_UNIQUE_EVENT_NAMES",
+            "flowCompletionEvent": "NO_UNIQUE_EVENT_NAMES",
+            "flowMultiTurnInputRequestEvent": "NO_UNIQUE_EVENT_NAMES",
+            "flowOutputEvent": "NO_UNIQUE_EVENT_NAMES",
+            "flowTraceEvent": "NO_UNIQUE_EVENT_NAMES",
+            "internalServerException": "NO_UNIQUE_EVENT_NAMES",
+            "resourceNotFoundException": "NO_UNIQUE_EVENT_NAMES",
+            "serviceQuotaExceededException": "NO_UNIQUE_EVENT_NAMES",
+            "throttlingException": "NO_UNIQUE_EVENT_NAMES",
+            "validationException": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "InlineAgentResponseStream": {
+            "accessDeniedException": "NO_UNIQUE_EVENT_NAMES",
+            "badGatewayException": "NO_UNIQUE_EVENT_NAMES",
+            "chunk": "NO_UNIQUE_EVENT_NAMES",
+            "conflictException": "NO_UNIQUE_EVENT_NAMES",
+            "dependencyFailedException": "NO_UNIQUE_EVENT_NAMES",
+            "files": "NO_UNIQUE_EVENT_NAMES",
+            "internalServerException": "NO_UNIQUE_EVENT_NAMES",
+            "resourceNotFoundException": "NO_UNIQUE_EVENT_NAMES",
+            "returnControl": "NO_UNIQUE_EVENT_NAMES",
+            "serviceQuotaExceededException": "NO_UNIQUE_EVENT_NAMES",
+            "throttlingException": "NO_UNIQUE_EVENT_NAMES",
+            "trace": "NO_UNIQUE_EVENT_NAMES",
+            "validationException": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "OptimizedPromptStream": {
+            "accessDeniedException": "NO_UNIQUE_EVENT_NAMES",
+            "analyzePromptEvent": "NO_UNIQUE_EVENT_NAMES",
+            "badGatewayException": "NO_UNIQUE_EVENT_NAMES",
+            "dependencyFailedException": "NO_UNIQUE_EVENT_NAMES",
+            "internalServerException": "NO_UNIQUE_EVENT_NAMES",
+            "optimizedPromptEvent": "NO_UNIQUE_EVENT_NAMES",
+            "throttlingException": "NO_UNIQUE_EVENT_NAMES",
+            "validationException": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "ResponseStream": {
+            "accessDeniedException": "NO_UNIQUE_EVENT_NAMES",
+            "badGatewayException": "NO_UNIQUE_EVENT_NAMES",
+            "chunk": "NO_UNIQUE_EVENT_NAMES",
+            "conflictException": "NO_UNIQUE_EVENT_NAMES",
+            "dependencyFailedException": "NO_UNIQUE_EVENT_NAMES",
+            "files": "NO_UNIQUE_EVENT_NAMES",
+            "internalServerException": "NO_UNIQUE_EVENT_NAMES",
+            "modelNotReadyException": "NO_UNIQUE_EVENT_NAMES",
+            "resourceNotFoundException": "NO_UNIQUE_EVENT_NAMES",
+            "returnControl": "NO_UNIQUE_EVENT_NAMES",
+            "serviceQuotaExceededException": "NO_UNIQUE_EVENT_NAMES",
+            "throttlingException": "NO_UNIQUE_EVENT_NAMES",
+            "trace": "NO_UNIQUE_EVENT_NAMES",
+            "validationException": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "RetrieveAndGenerateStreamResponseOutput": {
+            "accessDeniedException": "NO_UNIQUE_EVENT_NAMES",
+            "badGatewayException": "NO_UNIQUE_EVENT_NAMES",
+            "citation": "NO_UNIQUE_EVENT_NAMES",
+            "conflictException": "NO_UNIQUE_EVENT_NAMES",
+            "dependencyFailedException": "NO_UNIQUE_EVENT_NAMES",
+            "guardrail": "NO_UNIQUE_EVENT_NAMES",
+            "internalServerException": "NO_UNIQUE_EVENT_NAMES",
+            "output": "NO_UNIQUE_EVENT_NAMES",
+            "resourceNotFoundException": "NO_UNIQUE_EVENT_NAMES",
+            "serviceQuotaExceededException": "NO_UNIQUE_EVENT_NAMES",
+            "throttlingException": "NO_UNIQUE_EVENT_NAMES",
+            "validationException": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
