--- a/services/cloudwatchlogs/src/main/resources/codegen-resources/customization.config
+++ b/services/cloudwatchlogs/src/main/resources/codegen-resources/customization.config
@@ -15,5 +15,13 @@
         "GetLogEvents": "LastPageHasPreviousToken"
     },
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": false,
+    "useLegacyEventGenerationScheme": {
+        "StartLiveTailResponseStream": {
+            "sessionStart": "NO_UNIQUE_EVENT_NAMES",
+            "sessionUpdate": "NO_UNIQUE_EVENT_NAMES",
+            "SessionTimeoutException": "NO_UNIQUE_EVENT_NAMES",
+            "SessionStreamingException": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
