--- a/services/iotsitewise/src/main/resources/codegen-resources/customization.config
+++ b/services/iotsitewise/src/main/resources/codegen-resources/customization.config
@@ -1,5 +1,18 @@
 {
     "generateEndpointClientTests": true,
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": true
+    "enableFastUnmarshaller": true,
+    "useLegacyEventGenerationScheme": {
+        "ResponseStream": {
+            "trace": "NO_UNIQUE_EVENT_NAMES",
+            "output": "NO_UNIQUE_EVENT_NAMES",
+            "accessDeniedException": "NO_UNIQUE_EVENT_NAMES",
+            "conflictingOperationException": "NO_UNIQUE_EVENT_NAMES",
+            "internalFailureException": "NO_UNIQUE_EVENT_NAMES",
+            "invalidRequestException": "NO_UNIQUE_EVENT_NAMES",
+            "limitExceededException": "NO_UNIQUE_EVENT_NAMES",
+            "resourceNotFoundException": "NO_UNIQUE_EVENT_NAMES",
+            "throttlingException": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
