--- a/services/lambda/src/main/resources/codegen-resources/customization.config
+++ b/services/lambda/src/main/resources/codegen-resources/customization.config
@@ -9,5 +9,11 @@
         "InvokeAsync"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": true
+    "enableFastUnmarshaller": true,
+    "useLegacyEventGenerationScheme": {
+        "InvokeWithResponseStreamResponseEvent": {
+            "PayloadChunk": "NO_UNIQUE_EVENT_NAMES",
+            "InvokeComplete": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
