--- a/services/lexruntimev2/src/main/resources/codegen-resources/customization.config
+++ b/services/lexruntimev2/src/main/resources/codegen-resources/customization.config
@@ -4,5 +4,31 @@
     },
     "enableGenerateCompiledEndpointRules": true,
     "usePriorKnowledgeForH2": true,
-    "enableFastUnmarshaller": true
+    "enableFastUnmarshaller": true,
+    "useLegacyEventGenerationScheme": {
+        "StartConversationRequestEventStream": {
+            "ConfigurationEvent": "NO_UNIQUE_EVENT_NAMES",
+            "AudioInputEvent": "NO_UNIQUE_EVENT_NAMES",
+            "DTMFInputEvent": "NO_UNIQUE_EVENT_NAMES",
+            "TextInputEvent": "NO_UNIQUE_EVENT_NAMES",
+            "PlaybackCompletionEvent": "NO_UNIQUE_EVENT_NAMES",
+            "DisconnectionEvent": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "StartConversationResponseEventStream": {
+            "PlaybackInterruptionEvent": "NO_UNIQUE_EVENT_NAMES",
+            "TranscriptEvent": "NO_UNIQUE_EVENT_NAMES",
+            "IntentResultEvent": "NO_UNIQUE_EVENT_NAMES",
+            "TextResponseEvent": "NO_UNIQUE_EVENT_NAMES",
+            "AudioResponseEvent": "NO_UNIQUE_EVENT_NAMES",
+            "HeartbeatEvent": "NO_UNIQUE_EVENT_NAMES",
+            "AccessDeniedException": "NO_UNIQUE_EVENT_NAMES",
+            "ResourceNotFoundException": "NO_UNIQUE_EVENT_NAMES",
+            "ValidationException": "NO_UNIQUE_EVENT_NAMES",
+            "ThrottlingException": "NO_UNIQUE_EVENT_NAMES",
+            "InternalServerException": "NO_UNIQUE_EVENT_NAMES",
+            "ConflictException": "NO_UNIQUE_EVENT_NAMES",
+            "DependencyFailedException": "NO_UNIQUE_EVENT_NAMES",
+            "BadGatewayException": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
