--- a/services/sagemakerruntime/src/main/resources/codegen-resources/customization.config
+++ b/services/sagemakerruntime/src/main/resources/codegen-resources/customization.config
@@ -1,4 +1,11 @@
 {
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": true
+    "enableFastUnmarshaller": true,
+    "useLegacyEventGenerationScheme": {
+        "ResponseStream": {
+            "PayloadPart": "NO_UNIQUE_EVENT_NAMES",
+            "ModelStreamError": "NO_UNIQUE_EVENT_NAMES",
+            "InternalStreamFailure": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
