Fix codegen-generated-classes-test (add legacy customization)

--- a/test/codegen-generated-classes-test/src/main/resources/codegen-resources/customresponsemetadata/customization.config
+++ b/test/codegen-generated-classes-test/src/main/resources/codegen-resources/customresponsemetadata/customization.config
@@ -1,5 +1,5 @@
 {
-    "verifiedSimpleMethods" : [
+    "verifiedSimpleMethods": [
         "allTypes",
         "deleteOperation",
         "mapOfStringToListOfStringInQueryParams",
@@ -15,8 +15,8 @@
         "nestedContainers"
     ],
     "customResponseMetadata": {
-        "FOO_ID" : "x-foo-id",
-        "BAR_ID" : "x-bar-id",
+        "FOO_ID": "x-foo-id",
+        "BAR_ID": "x-bar-id",
         "REQUEST_ID": "x-foobar-id"
     },
     "skipEndpointTestGeneration": true,
@@ -26,18 +26,27 @@
     "useSraAuth": true,
     "endpointParameters": {
         "Tables": {
-          "required": false,
-          "type": "StringArray"
+            "required": false,
+            "type": "StringArray"
         }
     },
     "customOperationContextParams": [
-      {
-        "operationName": "GetOperationWithMapEndpointParam",
-        "operationContextParamsMap": {
-          "Tables": {
-            "path" : "keys(MapOfStrings)"
-          }
+        {
+            "operationName": "GetOperationWithMapEndpointParam",
+            "operationContextParamsMap": {
+                "Tables": {
+                    "path": "keys(MapOfStrings)"
+                }
+            }
         }
-      }
-    ]
+    ],
+    "useLegacyEventGenerationScheme": {
+        "InputEventStream": {
+            "InputEvent": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "EventStream": {
+            "EventOne": "NO_UNIQUE_EVENT_NAMES",
+            "EventTwo": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
