--- a/test/codegen-generated-classes-test/src/main/resources/codegen-resources/endpointproviders/customization.config
+++ b/test/codegen-generated-classes-test/src/main/resources/codegen-resources/endpointproviders/customization.config
@@ -1,6 +1,5 @@
 {
     "skipEndpointTestGeneration": true,
-
     "enableGenerateCompiledEndpointRules": false,
     "endpointParameters": {
         "PojoString": {
@@ -23,11 +22,11 @@
             "documentation": "A list of string that are map keys",
             "type": "StringArray"
         },
-         "MissingRequestValuesListOfString": {
-             "required": false,
-             "documentation": "A list of string from a field that is not populated in the request",
-             "type": "StringArray"
-         }
+        "MissingRequestValuesListOfString": {
+            "required": false,
+            "documentation": "A list of string from a field that is not populated in the request",
+            "type": "StringArray"
+        }
     },
     "customOperationContextParams": [
         {
@@ -50,5 +49,14 @@
                 }
             }
         }
-    ]
+    ],
+    "useLegacyEventGenerationScheme": {
+        "InputEventStream": {
+            "InputEvent": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "EventStream": {
+            "EventOne": "NO_UNIQUE_EVENT_NAMES",
+            "EventTwo": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
