--- a/test/codegen-generated-classes-test/src/main/resources/codegen-resources/serviceconfig/customization.config
+++ b/test/codegen-generated-classes-test/src/main/resources/codegen-resources/serviceconfig/customization.config
@@ -1,9 +1,18 @@
 {
-    "verifiedSimpleMethods" : [
+    "verifiedSimpleMethods": [
         "allTypes"
     ],
     "serviceConfig": {
         "className": "ProtocolRestJsonWithConfigConfiguration",
         "hasDualstackProperty": true
+    },
+    "useLegacyEventGenerationScheme": {
+        "InputEventStream": {
+            "InputEvent": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "EventStream": {
+            "EventOne": "NO_UNIQUE_EVENT_NAMES",
+            "EventTwo": "NO_UNIQUE_EVENT_NAMES"
+        }
     }
 }
