--- a/test/codegen-generated-classes-test/src/main/resources/codegen-resources/xml/customization.config
+++ b/test/codegen-generated-classes-test/src/main/resources/codegen-resources/xml/customization.config
@@ -2,26 +2,35 @@
     "skipEndpointTestGeneration": true,
     "requiredTraitValidationEnabled": true,
     "customSdkShapes": {
-      "shapes":{
-        "SdkPartType":{
-          "type":"string",
-          "enum":[
-            "DEFAULT",
-            "LAST"
-          ]
+        "shapes": {
+            "SdkPartType": {
+                "type": "string",
+                "enum": [
+                    "DEFAULT",
+                    "LAST"
+                ]
+            }
         }
-      }
     },
     "shapeModifiers": {
-      "AllTypesStructure": {
-        "inject": [
-          {
-            "SdkPartType": {
-              "shape": "SdkPartType",
-              "documentation": "Indicates whether the request is a last part or not. This field will not be included in the request payload."
-            }
-          }
-        ]
-      }
+        "AllTypesStructure": {
+            "inject": [
+                {
+                    "SdkPartType": {
+                        "shape": "SdkPartType",
+                        "documentation": "Indicates whether the request is a last part or not. This field will not be included in the request payload."
+                    }
+                }
+            ]
+        }
+    },
+    "useLegacyEventGenerationScheme": {
+        "InputEventStream": {
+            "InputEvent": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "EventStream": {
+            "EventOne": "NO_UNIQUE_EVENT_NAMES",
+            "EventTwo": "NO_UNIQUE_EVENT_NAMES"
+        }
     }
 }
