--- a/test/codegen-generated-classes-test/src/main/resources/codegen-resources/eventstreams/customization.config
+++ b/test/codegen-generated-classes-test/src/main/resources/codegen-resources/eventstreams/customization.config
@@ -1,6 +1,16 @@
 {
+    "skipEndpointTestGeneration": true,
     "useLegacyEventGenerationScheme": {
-        "EventStream": ["LegacyGeneratedEvent"]
-    },
-    "skipEndpointTestGeneration": true
+        "InputEventStream": {
+            "InputEvent": "NO_UNIQUE_EVENT_NAMES",
+            "InputEventB": "NO_UNIQUE_EVENT_NAMES",
+            "InputEventTwo": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "EventStream": {
+            "LegacyGeneratedEvent": "NO_EVENT_SUBCLASS",
+            "TheEventOne": "NO_UNIQUE_EVENT_NAMES",
+            "EventTwo": "NO_UNIQUE_EVENT_NAMES",
+            "SecondEventTwo": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
