--- a/test/codegen-generated-classes-test/src/main/resources/codegen-resources/waiters/customization.config
+++ b/test/codegen-generated-classes-test/src/main/resources/codegen-resources/waiters/customization.config
@@ -1,3 +1,12 @@
 {
-    "skipEndpointTestGeneration": true
+    "skipEndpointTestGeneration": true,
+    "useLegacyEventGenerationScheme": {
+        "InputEventStream": {
+            "InputEvent": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "EventStream": {
+            "EventOne": "NO_UNIQUE_EVENT_NAMES",
+            "EventTwo": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
