Add legacy customization flags to protocol tests

--- a/test/protocol-tests/src/main/resources/codegen-resources/restjson/contenttype/customization.config
+++ b/test/protocol-tests/src/main/resources/codegen-resources/restjson/contenttype/customization.config
@@ -1,3 +1,16 @@
 {
-    "skipEndpointTestGeneration": true
+    "skipEndpointTestGeneration": true,
+    "useLegacyEventGenerationScheme": {
+        "InputEventStream": {
+            "BlobAndHeadersEvent": "NO_UNIQUE_EVENT_NAMES",
+            "StringAndHeadersEvent": "NO_UNIQUE_EVENT_NAMES",
+            "HeadersOnlyEvent": "NO_UNIQUE_EVENT_NAMES",
+            "EndEvent": "NO_UNIQUE_EVENT_NAMES",
+            "ImplicitPayloadAndHeadersEvent": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "EventStream": {
+            "EventOne": "NO_UNIQUE_EVENT_NAMES",
+            "EventTwo": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
