--- a/test/protocol-tests/src/main/resources/codegen-resources/restjson/customization.config
+++ b/test/protocol-tests/src/main/resources/codegen-resources/restjson/customization.config
@@ -1,5 +1,5 @@
 {
-    "verifiedSimpleMethods" : [
+    "verifiedSimpleMethods": [
         "allTypes",
         "deleteOperation",
         "mapOfStringToListOfStringInQueryParams",
@@ -17,5 +17,18 @@
         "statusCodeInOutputOperation",
         "getOperationWithBody"
     ],
-    "skipEndpointTestGeneration": true
+    "skipEndpointTestGeneration": true,
+    "useLegacyEventGenerationScheme": {
+        "InputEventStream": {
+            "InputEvent": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "InputEventStreamStringPayload": {
+            "InputEvent": "NO_UNIQUE_EVENT_NAMES"
+        },
+        "EventStream": {
+            "EventOne": "NO_UNIQUE_EVENT_NAMES",
+            "EventTwo": "NO_UNIQUE_EVENT_NAMES",
+            "errorOne": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
