--- a/test/protocol-tests/src/main/resources/codegen-resources/restxml/customization.config
+++ b/test/protocol-tests/src/main/resources/codegen-resources/restxml/customization.config
@@ -1,5 +1,5 @@
 {
-    "verifiedSimpleMethods" : [
+    "verifiedSimpleMethods": [
         "allTypes",
         "deleteOperation",
         "mapOfStringToListOfStringInQueryParams",
@@ -10,5 +10,12 @@
         "queryParamWithoutValue",
         "restXmlTypes"
     ],
-    "skipEndpointTestGeneration": true
+    "skipEndpointTestGeneration": true,
+    "useLegacyEventGenerationScheme": {
+        "EventStream": {
+            "EventPayloadEvent": "NO_UNIQUE_EVENT_NAMES",
+            "NonEventPayloadEvent": "NO_UNIQUE_EVENT_NAMES",
+            "SecondEventPayloadEvent": "NO_UNIQUE_EVENT_NAMES"
+        }
+    }
 }
